# ownly

./: .env.compose-defaults  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.rep.yml  docker-compose.yml  init-env.sh  security-audit.md
backend/: .env.example  Cargo.toml  Cargo.toml.tmp  Dockerfile  clippy.toml
backend/migrations/postgres/: 001_init.sql  002_video_hls.sql  003_video_export.sql  004_background_jobs.sql  005_job_stale_lock_index.sql  006_public_shares.sql  007_files_search_index.sql  008_natural_sort.sql  009_recycle_bin.sql  010_public_share_settings.sql  011_resource_user_shares.sql  012_audio_waveform.sql  013_storage_nodes.sql  014_storage_nodes_standalone.sql  015_file_storage_placement.sql  016_video_thumbnails.sql  017_video_thumbnail_progress.sql  018_image_grid_thumbnails.sql  019_job_stale_queued_index.sql  020_user_storage_quota.sql  021_file_content_hash.sql  022_atomic_permissions.sql  023_storage_migration_runs.sql  024_logging_config_default.sql  025_document_grid_thumbnails.sql  026_document_preview_regenerate.sql  027_spreadsheet_grid_preview_regenerate.sql  028_video_dimensions.sql  029_upload_sessions.sql
backend/src/: app_settings_secrets.rs  audit.rs  browser_guard.rs  config.rs  db.rs  error.rs  health.rs  lib.rs  main.rs  outbound_target.rs  patch_fields.rs  quota.rs  rate_limit.rs  redact.rs  request_tracking.rs  secrets.rs  stream_ticket.rs  temp_cleanup.rs  user_sessions.rs
backend/src/admin/: console.rs  groups.rs  handlers.rs  mod.rs  storage_migration.rs  storage_migration_run.rs  storage_nodes.rs
backend/src/audio/: handlers.rs  mod.rs  waveform.rs  waveform_job.rs
backend/src/auth/: handlers.rs  mod.rs  session_cookie.rs
backend/src/authz/: catalog.rs  grants.rs  mod.rs  resolver.rs  tests.rs
backend/src/crypto/: mod.rs
backend/src/document/: mime.rs  mod.rs  spreadsheet_preview.rs  thumbnail.rs  thumbnail_job.rs
backend/src/files/: access.rs  bulk_download.rs  content_hash.rs  delete_config.rs  delete_job.rs  file_copy.rs  file_delete.rs  folder_download.rs  folder_move.rs  folders.rs  gif_preview.rs  handlers.rs  listing.rs  mod.rs  processing.rs  recycle_bin.rs  rename.rs  upload_finalize.rs  upload_spool.rs  upload_validation.rs  zip_job.rs
backend/src/hls/: encode_job.rs  encoder.rs  export.rs  export_job.rs  handlers.rs  hardware.rs  key_store.rs  mod.rs  playlist.rs  probe.rs  regression.rs  segment_crypto.rs  segment_upload.rs
backend/src/image/: handlers.rs  mod.rs  thumbnail.rs  thumbnail_job.rs
backend/src/jobs/: executor.rs  handlers.rs  mod.rs  model.rs  recovery.rs  store.rs  (+1 more)
backend/tests/: http_integration.rs  test_harness.rs
nebular-os/: .env.example  .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml
nebular-os/docs/: openapi.yaml
nebular-os/src/: auth.rs  config.rs  lib.rs  main.rs  observability.rs  secrets.rs  server.rs
nebular-os/tests/: cluster_integration.rs  integration.rs
(+835 files in other folders)
