[package]
name = "mediavault-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "mediavault_backend"
path = "src/lib.rs"

[[bin]]
name = "mediavault-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

jsonwebtoken = "9"
argon2 = "0.5"
password-hash = { version = "0.5", default-features = false }
rand = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2"
anyhow = "1"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
dotenvy = "0.15"

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
mime_guess = "2"
bytes = "1"
aes-gcm = "0.10"
aes = "0.8"
cbc = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
tempfile = "3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
uuid = { version = "1", features = ["v4"] }
